--- a/src/main/resources/everload-front/assets/i18n/es.json
+++ b/src/main/resources/everload-front/assets/i18n/es.json
@@ -1,11 +1,12 @@
 {
   "_comment1": "Textos generales de la app",
-  "APP_NAME": "EverLoad",
+  "Youtube": "YouTube",
   "SUBTITLE": "Descarga videos y música fácilmente",
   "DOWNLOAD_YOUTUBE": "Descargar vídeo de YouTube",
   "CREATED_BY": "Creado por",
   "GITHUB": "GitHub",
   "DOWNLOAD_Twitter": "Descargar de YouTube",
+  "DOWNLOAD_TIKTOK": "Descargar de TikTok",
 
   "_comment2": "Sección de YouTube",
   "HOME": "🏠 Inicio",
@@ -63,9 +64,32 @@
   "PASTE_INSTAGRAM_URL": "Pega aquí la URL del vídeo de Instagram",
   "INVALID_INSTAGRAM_URL": "URL inválida. Asegúrate de que sea un enlace válido de Instagram.",
   "SUBTITLE_INSTAGRAM": "Descarga vídeos públicos de Instagram fácilmente.",
-  "INSTAGRAM_LIMITATION": "Solo se pueden descargar Reels y publicaciones públicas. No se admiten stories ni vídeos de cuentas privadas."
+  "INSTAGRAM_LIMITATION": "Solo se pueden descargar Reels y publicaciones públicas. No se admiten stories ni vídeos de cuentas privadas.",
+
+  "_comment6": "Sección de Spotify",
+  "DOWNLOAD_SPOTIFY": "Descargar de Spotify",
+  "DOWNLOAD_Spotify_FAILED": "Ocurrió un error al descargar desde Spotify",
+  "TITLE": "Descargador de playlists de Spotify",
+  "Spotify_Subtitle": "Pega la URL de tu playlist y descarga las canciones una a una",
+  "PLACEHOLDER": "Pega aquí la URL de la playlist",
+  "SEARCH_BUTTON": "Buscar canciones",
+  "LOADING": "Buscando canciones...",
+  "DOWNLOAD_ALL": "Descargar toda la playlist",
+  "FOUND_TRACKS": "Canciones encontradas:",
+  "DOWNLOAD": "Descargar",
+  "NO_RESULTS": "No se encontraron canciones o hubo un error.",
+  "EMPTY_URL_ERROR_Spotify": "Por favor, introduce unha ligazón válida de Spotify.",
 
 
+
+  "_comment7": "Sección de TikTok",
+  "PASTE_TIKTOK_URL": "Pega el enlace de TikTok",
+  "DOWNLOAD_TIKTOK": "Descargar desde TikTok",
+  "LOADING": "Descargando",
+  "HOME": "Inicio",
+  "EMPTY_URL_ERROR": "Por favor, introduce un enlace de TikTok.",
+  "DOWNLOAD_FAILED": "No se pudo descargar el vídeo. Inténtalo de nuevo más tarde."
+  
     
     
   }
