update title name Spotify

--- a/everload-front/src/assets/i18n/es.json
+++ b/everload-front/src/assets/i18n/es.json
@@ -69,7 +69,7 @@
   "_comment6": "Sección de Spotify",
   "DOWNLOAD_SPOTIFY": "Descargar de Spotify",
   "DOWNLOAD_Spotify_FAILED": "Ocurrió un error al descargar desde Spotify",
-  "TITLE": "Descargador de playlists de Spotify",
+  "TITLE": "Spotify Downloader",
   "Spotify_Subtitle": "Pega la URL de tu playlist y descarga las canciones una a una",
   "PLACEHOLDER": "Pega aquí la URL de la playlist",
   "SEARCH_BUTTON": "Buscar canciones",
