--- a/everload-front/src/assets/i18n/gl.json
+++ b/everload-front/src/assets/i18n/gl.json
@@ -72,7 +72,7 @@
 "_comment6": "Sección de Spotify",
 "DOWNLOAD_SPOTIFY": "Descargar dende Spotify",
 "DOWNLOAD_Spotify_FAILED": "Produciuse un erro ao descargar dende Spotify",
-  "TITLE": "Descargador de listas de Spotify",
+  "TITLE": "Spotify Downloader",
   "Spotify_Subtitle": "Pega a URL da túa lista e descarga as cancións unha a unha",
   "PLACEHOLDER": "Pega aquí a URL da lista",
   "SEARCH_BUTTON": "Buscar cancións",
