--- a/everload-front/src/assets/i18n/es.json
+++ b/everload-front/src/assets/i18n/es.json
@@ -34,6 +34,8 @@
   "ERROR_UNKNOWN": "Algo salió mal. Intenta de nuevo más tarde.",
   "ERROR_DOWNLOADING_MUSIC": "Ocurrió un error al descargar la música.",
   "ERROR_LOADING_PLAYLIST": "Ocurrió un error al cargar la lista de reproducción.",
+  "PLEASE_ENTER_YOUTUBE_LINK": "Introduce un enlace de YouTube",
+
 
     
 
