--- a/everload-front/src/assets/i18n/gl.json
+++ b/everload-front/src/assets/i18n/gl.json
@@ -37,6 +37,8 @@
 "ERROR_UNKNOWN": "Algo saíu mal. Inténtao de novo máis tarde.",
 "ERROR_DOWNLOADING_MUSIC": "Produciuse un erro ao descargar a música.",
 "ERROR_LOADING_PLAYLIST": "Produciuse un erro ao cargar a lista de reprodución",
+"PLEASE_ENTER_YOUTUBE_LINK": "Introduce unha ligazón de YouTube",
+
 
 
 
