about finished page

--- a/everload-front/src/assets/i18n/en.json
+++ b/everload-front/src/assets/i18n/en.json
@@ -119,12 +119,12 @@
   "PLATAFORMA": "Platform",
   "FECHA": "Date",
   "API_OK": "🟢 {{ platform }} working",
-  "API_ERROR": "🔴 {{ platform }} has issues"
+  "API_ERROR": "🔴 {{ platform }} has issues",
 
-  
-
-
-
-    
+  "_about":"About the app",
+  "ABOUT.CREATOR": "EverLoad is a free and open-source app to download videos and music from YouTube, Twitter, Facebook, Instagram, Spotify, and TikTok.",
+  "ABOUT.ROLE": "Developer",
+  "ABOUT.NAME": "Xián",
+  "ABOUT.EMAIL": "xiandt01@gmail.com"
   }
   
