creator name corrected

--- a/everload-front/src/assets/i18n/en.json
+++ b/everload-front/src/assets/i18n/en.json
@@ -124,7 +124,7 @@
   "_about":"About the app",
   "ABOUT.CREATOR": "EverLoad is a free and open-source app to download videos and music from YouTube, Twitter, Facebook, Instagram, Spotify, and TikTok.",
   "ABOUT.ROLE": "Developer",
-  "ABOUT.NAME": "Xián",
+  "ABOUT.NAME": "XiánDT",
   "ABOUT.EMAIL": "xiandt01@gmail.com"
   }
   
