--- a/everload-front/src/assets/i18n/gl.json
+++ b/everload-front/src/assets/i18n/gl.json
@@ -128,7 +128,7 @@
     "ABOUT":"Acerca da app",
     "ABOUT.CREATOR": "EverLoad é unha aplicación gratuíta e de código aberto para descargar vídeos e música de YouTube, Twitter, Facebook, Instagram, Spotify e TikTok.",
     "ABOUT.ROLE": "Desenvolvedor",
-    "ABOUT.NAME": "Xián",
+    "ABOUT.NAME": "XiánDT",
     "ABOUT.EMAIL": "xiandt01@gmail.com"
   
 
