--- a/everload-front/src/assets/i18n/en.json
+++ b/everload-front/src/assets/i18n/en.json
@@ -73,7 +73,7 @@
   "TITLE": "Spotify Downloader",
   "Spotify_Subtitle": "Paste your playlist URL and download the songs one by one",
   "PLACEHOLDER": "Paste the playlist URL here",
-  "SEARCH_BUTTON": "Search songs",
+  "SEARCH_BUTTON": "Search",
   "LOADING": "Searching songs...",
   "DOWNLOAD_ALL": "Download entire playlist",
   "FOUND_TRACKS": "Found songs:",
